fix overflowing text

--- a/webui/style.css
+++ b/webui/style.css
@@ -283,7 +283,7 @@
   }
 
   .suggestions div {
-    width: 129px;
+    width: 135px;
     height: 60px;
     background-color: rgb(247, 247, 247);
     padding: 10px;
